Fixed alignment of sort filter #3742

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/homehearing.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/homehearing.scss
@@ -3,6 +3,10 @@
   border-top: 1px #e8e8e8 solid;
   width: 100vw;
   /* Adjust the gap between left-side and right-side if needed */
+  .search-wrapper
+  .select-signature-main {
+    margin-top: 14px;
+  }
 }
 
 .left-side {
